<resources>
    <string name="app_name">Notes</string>
    <string name="todo">TODO</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="reset">Enter the email address you used when creating the account and click Send Password Reset Email. A message will be sent to that address containing a link to reset your password.</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="list_mode">list mode</string>
    <string name="transition">transition</string>
</resources>